Open sun.nio.ch package for reflection - It prevents the Illegal reflective access warning in com.hazelcast.spi.hotrestart.impl.gc.mem.MmapSlab