@@ -60,10 +60,11 @@
                 <configuration>
                     <!-- 
                     Hot Restart related arguments:
-                        export java.base/jdk.internal.ref=com.hazelcast.core
-                        open java.base/java.nio=com.hazelcast.core
+                        export java.base/jdk.internal.ref
+                        open java.base/java.nio
+                        open java.base/sun.nio.ch
                     Operating system metrics related:
-                        open jdk.management/com.sun.management.internal=com.hazelcast.core
+                        open jdk.management/com.sun.management.internal
                      -->
                     <argLine>
                         ${vmHeapSettings}
@@ -71,6 +72,7 @@
                         -ea
                         --add-exports java.base/jdk.internal.ref=com.hazelcast.core
                         --add-opens java.base/java.nio=com.hazelcast.core
+                        --add-opens java.base/sun.nio.ch=com.hazelcast.core
                         --add-opens jdk.management/com.sun.management.internal=com.hazelcast.core
                         --illegal-access=warn
                         -Dhazelcast.hidensity.check.freememory=false
