@@ -647,6 +647,7 @@
                             Hot Restart related arguments:
                                 export java.base/jdk.internal.ref
                                 open java.base/java.nio
+                                open java.base/sun.nio.ch
                             Operating system metrics related:
                                 open jdk.management/com.sun.management.internal
 
@@ -659,6 +660,7 @@
                                 -ea
                                 --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
                                 --add-opens java.base/java.nio=ALL-UNNAMED
+                                --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                                 --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
                                 --add-exports java.xml/jdk.xml.internal=ALL-UNNAMED
                                 --illegal-access=warn
